unpackaged/main/default/objects/PagesApi__Page_Element__c/PagesApi__Page_Element__c.object-meta.xml
<CustomObject>
    <description>Page Elements define the content for pages in Fonteva Communities.</description>
    <label>Page Element</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Element ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>