unpackaged/main/default/objects/PagesApi__Page_Element__c/fields/OrderApi__Campaign_Page__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Campaign_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Campaign Page.</description>
    <inlineHelpText>Link to related Campaign Page.</inlineHelpText>
    <label>Campaign Page</label>
    <referenceTo>OrderApi__Campaign_Page__c</referenceTo>
    <relationshipLabel>Page Elements</relationshipLabel>
    <relationshipName>Page_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>