unpackaged/main/default/objects/PagesApi__Page_Element__c/fields/PagesApi__Component__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Component__c</fullName>
    <description>The name of the PagesApi component.</description>
    <inlineHelpText>The name of the PagesApi component.</inlineHelpText>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>