unpackaged/main/default/objects/PagesApi__Page_Element__c/fields/PagesApi__HTML__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__HTML__c</fullName>
    <description>HTML content for the page element.</description>
    <inlineHelpText>HTML content for the page element.</inlineHelpText>
    <label>HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>