unpackaged/main/default/objects/PagesApi__Page_Element__c/fields/PagesApi__Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** Required ** The order in which the element renders inside of a given page section.</description>
    <inlineHelpText>** Required ** The order in which the element renders inside of a given page section.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>