unpackaged/main/default/objects/PagesApi__Page_Element__c/fields/PagesApi__Page__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the page that renders the page element.</description>
    <inlineHelpText>** Required ** Link to the page that renders the page element.</inlineHelpText>
    <label>Page</label>
    <referenceTo>PagesApi__Page__c</referenceTo>
    <relationshipLabel>Page Elements</relationshipLabel>
    <relationshipName>Page_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>